--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Rollup plugin for automatically injecting a script tag with the final bundle into an html file.",
   "main": "dist/rollup-plugin-html-template.js",
   "module": "dist/rollup-plugin-html-template.module.js",
+  "jsnext:main": "dist/rollup-plugin-html-template.module.js",
+  "files": [
+    "dist",
+    "src",
+    "README.md"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build:cjs && npm run build:module",
     "build:cjs": "rollup -c -o ./dist/rollup-plugin-html-template.js -f cjs",
     "build:module": "rollup -c -o ./dist/rollup-plugin-html-template.module.js -f es",
+    "prebuild": "rimraf dist/*",
     "lint": "eslint ./src",
     "prepublish": "npm run lint && npm run build"
   },
@@ -34,6 +41,7 @@
   "devDependencies": {
     "eslint": "^4.19.0",
     "eslint-config-google": "^0.9.1",
+    "rimraf": "^2.6.2",
     "rollup": "^0.57.1",
     "rollup-plugin-buble": "^0.19.2"
   }
