--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "build:cjs": "rollup -c -o ./dist/rollup-plugin-html-template.js -f cjs",
     "build:module": "rollup -c -o ./dist/rollup-plugin-html-template.module.js -f es",
     "prebuild": "rimraf dist/*",
-    "lint": "eslint ./src",
-    "prepublish": "npm run lint && npm run build"
+    "lint": "eslint ./src"
   },
   "repository": {
     "type": "git",
@@ -44,5 +43,8 @@
     "rimraf": "^2.6.2",
     "rollup": "^0.57.1",
     "rollup-plugin-buble": "^0.19.2"
+  },
+  "peerDependencies": {
+    "rollup": ">=0.50.0"
   }
 }
