--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "README.md"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./test/tests.js --require babel-core/register",
+    "pretest": "npm run build",
     "build": "npm run build:cjs && npm run build:module",
     "build:cjs": "rollup -c -o ./dist/rollup-plugin-generate-html-template.js -f cjs",
     "build:module": "rollup -c -o ./dist/rollup-plugin-generate-html-template.module.js -f es",
@@ -38,11 +39,14 @@
   },
   "homepage": "https://github.com/bengsfort/rollup-plugin-generate-html-template#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.19.0",
     "eslint-config-google": "^0.9.1",
+    "mocha": "^5.0.4",
     "rimraf": "^2.6.2",
     "rollup": "^0.57.1",
-    "rollup-plugin-buble": "^0.19.2"
+    "rollup-plugin-babel": "^3.0.3"
   },
   "peerDependencies": {
     "rollup": ">=0.50.0"
