--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "README.md"
   ],
   "scripts": {
-    "test": "npm run lint && mocha ./test/tests.js --require babel-core/register",
+    "test": "npm run lint && mocha ./test/tests.js",
     "pretest": "npm run build",
     "build": "npm run build:cjs && npm run build:module",
     "build:cjs": "rollup -c -o ./dist/rollup-plugin-generate-html-template.js -f cjs",
@@ -39,16 +39,17 @@
   },
   "homepage": "https://github.com/bengsfort/rollup-plugin-generate-html-template#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "eslint": "^4.19.0",
-    "eslint-config-google": "^0.9.1",
-    "mocha": "^5.0.4",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.57.1",
-    "rollup-plugin-babel": "^3.0.3"
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
+    "eslint": "^5.13.0",
+    "eslint-config-google": "^0.12.0",
+    "mocha": "^5.2.0",
+    "rimraf": "^2.6.3",
+    "rollup": ">=1.1.2",
+    "rollup-plugin-babel": "^4.3.2"
   },
   "peerDependencies": {
-    "rollup": ">=0.50.0"
+    "rollup": ">=1.1.2"
   }
 }
