--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
   "presets": [
-    ["@babel/preset-env", { "modules": false, "targets": { "node": true } }]
+    ["@babel/preset-env", {
+      "targets": {
+        "node": "current"
+      }
+    }]
   ]
 }
