--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "url": "https://github.com/bengsfort/rollup-plugin-generate-html-template/issues"
   },
   "homepage": "https://github.com/bengsfort/rollup-plugin-generate-html-template#readme",
+  "dependencies": {
+    "fs-extra": "^7.0.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
@@ -47,14 +50,16 @@
     "babel-jest": "^24.8.0",
     "eslint": "^5.16.0",
     "eslint-plugin-jest": "^22.5.1",
-    "fs-extra": "^8.0.1",
     "husky": "^2.3.0",
     "jest": "^24.8.0",
+    "lcov-badge-generator": "^1.0.5",
     "lint-staged": "^8.1.7",
     "prettier": "^1.17.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.9.0",
-    "rollup-plugin-babel": "^4.3.2"
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-resolve": "^5.0.0"
   },
   "peerDependencies": {
     "rollup": ">=1.1.2"
