--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "dist/rollup-plugin-generate-html-template.js",
   "module": "dist/rollup-plugin-generate-html-template.module.js",
   "jsnext:main": "dist/rollup-plugin-generate-html-template.module.js",
-  "files": ["dist", "src", "README.md"],
+  "files": [
+    "dist",
+    "src",
+    "README.md"
+  ],
   "scripts": {
     "coverage": "lcov-badge-generator -o ./coverage/coverage.svg ./coverage/lcov.info",
     "test": "yarn lint:fix && jest",
@@ -70,7 +74,14 @@
     }
   },
   "lint-staged": {
-    "*.js": ["prettier --write", "yarn lint:fix", "git add"],
-    "*.json": ["prettier --write", "git add"]
+    "*.js": [
+      "prettier --write",
+      "yarn lint:fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
