--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "rollup": "^1.9.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.0"
+    "rollup-plugin-node-resolve": "^5.0.0",
+    "rollup-plugin-postcss": "^3.1.2"
   },
   "peerDependencies": {
     "rollup": ">=1.1.2"
