--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "dist/rollup-plugin-generate-html-template.js",
   "module": "dist/rollup-plugin-generate-html-template.module.js",
   "jsnext:main": "dist/rollup-plugin-generate-html-template.module.js",
-  "files": ["dist", "src", "README.md"],
+  "files": [
+    "dist",
+    "src",
+    "README.md"
+  ],
   "scripts": {
     "coverage": "lcov-badge-generator -o ./coverage/coverage.svg ./coverage/lcov.info",
     "test": "yarn lint:fix && jest",
@@ -41,7 +45,7 @@
   },
   "homepage": "https://github.com/bengsfort/rollup-plugin-generate-html-template#readme",
   "dependencies": {
-    "fs-extra": "^7.0.1"
+    "fs-extra": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -71,7 +75,14 @@
     }
   },
   "lint-staged": {
-    "*.js": ["prettier --write", "yarn lint:fix", "git add"],
-    "*.json": ["prettier --write", "git add"]
+    "*.js": [
+      "prettier --write",
+      "yarn lint:fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
